--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,15 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+.idea/
+.idea/misc.xml
+.idea/workspace.xml
+/.idea
+/.idea/modules.xml
+/.idea/power-acedemy-admin-dashboard.iml
+/.idea/vcs.xml
+/.idea/workspace.xml
+/.idea/inspectionProfiles
+/.idea/encodings.xml
+/.idea/misc.xml
